# note-or-never-website

./: .gitignore  README.md  idea.md  next.config.js  package.json
components/ConfirmDialog/: index.tsx
components/Markdown/: index.tsx
components/Markdown/Editor/: index.tsx  theme.ts
components/Markdown/Header/: index.tsx
components/Markdown/Header/Menu/: index.tsx
components/Markdown/Header/ViewSelect/: index.tsx
components/Markdown/Layout/: index.tsx
components/Markdown/Layout/Desktop/: Content.tsx  index.tsx
components/Markdown/Layout/Mobile/: Content.tsx  Header.tsx  index.tsx
components/Markdown/Preview/: index.tsx
components/Markdown/Sidebar/: index.tsx
components/Markdown/Sidebar/Actions/: AddNoteButton.tsx  Sort.tsx  index.tsx
components/Markdown/Sidebar/List/: Item.tsx  index.tsx
components/Markdown/Sidebar/Search/: index.tsx
components/Markdown/Skeleton/: index.tsx
components/Spinner/: index.tsx
components/Tooltip/: index.tsx
components/UserDetailsForm/: index.tsx
hooks/: useIsMobile.ts
interfaces/: types.ts
pages/: _app.tsx  _document.tsx  index.tsx
pages/[handle]/: index.tsx
public/data/: notes.json
store/: index.ts
store/slices/: notes.ts
styles/: globals.css  markdown.css
utils/: classnames.ts  scroll-percentage.ts
wasm/: Cargo.toml
wasm/pkg/: md_wasm.d.ts  md_wasm.js  md_wasm_bg.js  md_wasm_bg.wasm  md_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
workers/: wasm.worker.ts
